services/api/kubes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-api
  labels:
    app: kube-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: kube-api
  template:
    metadata:
      labels:
        app: kube-api
    spec:
      containers:
      - name: kube-api
        image: kube_cluster/api
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
