services/api/kubes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-api-service
spec:
  selector:
    app: kube-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
