services/api/kubes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost  # Replace with your desired hostname
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kube-api-service
                port:
                  number: 80
          - path: /svc_a(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kube-service-a-service
                port:
                  number: 80
